[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/L2_lab/safety_poster.png" type="Texture" id=1]
[ext_resource path="res://Levels/1.0 - Lab/RobotSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L2_lab/science_poster.png" type="Texture" id=3]
[ext_resource path="res://Levels/1.0 - Lab/waste_bin.tscn" type="PackedScene" id=4]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/L2_lab/sinktop.png" type="Texture" id=6]
[ext_resource path="res://Levels/1.0 - Lab/potted_palm.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/L2_lab/chemistry_stuff.png" type="Texture" id=8]
[ext_resource path="res://sprites/L2_lab/lab_room.png" type="Texture" id=9]
[ext_resource path="res://sprites/L2_lab/camera.png" type="Texture" id=10]
[ext_resource path="res://tunes/lab/youdidit2.wav" type="AudioStream" id=11]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/L2_lab/science_desk.png" type="Texture" id=13]
[ext_resource path="res://sprites/L2_lab/lab_counter.png" type="Texture" id=14]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/L2_lab/computer_console.png" type="Texture" id=17]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]
[ext_resource path="res://sprites/L2_lab/thick_book.png" type="Texture" id=19]
[ext_resource path="res://sprites/L2_lab/medium_book.png" type="Texture" id=20]
[ext_resource path="res://Levels/1.0 - Lab/labpuzzleroom3.gd" type="Script" id=21]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 353.096, -752.485 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/player:cutscene_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort/player:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 342.504, 33.2312 ), Vector2( 342.504, 33.2312 ), Vector2( 342.504, -443.719 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "dogup", "dogdown", "down" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/player:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 346.784, 120.153 ), Vector2( 346.784, 120.153 ), Vector2( 346.784, -227.859 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("YSort/player:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 4.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dropoff"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "robot_say_what_was_that"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot/RemoteTransform2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 366.056, -231.518 ), Vector2( 366.056, -578.214 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/robot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 182.05, -716.647 ), Vector2( 182.05, -716.647 ), Vector2( 182.05, -716.647 ), Vector2( 355.604, -716.647 ), Vector2( 355.604, -778.026 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/robot:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "left", "right", "up" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/robot:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("YSort/robot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/robot:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.8, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cutscene_over"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 105.925, 49.1887 )

[node name="labpuzzleroom3" type="Node2D"]
script = ExtResource( 21 )

[node name="bottomSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 348.715, 131.839 )

[node name="topSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 338.895, -611.782 )

[node name="lab_room" type="Sprite" parent="."]
position = Vector2( 364.749, -433.062 )
texture = ExtResource( 9 )

[node name="safety_poster" type="Sprite" parent="."]
position = Vector2( 759.787, -822.961 )
texture = ExtResource( 1 )

[node name="science_poster" type="Sprite" parent="."]
position = Vector2( 639.356, -828.518 )
texture = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="computer_console" type="Sprite" parent="YSort"]
position = Vector2( 698.66, -495.172 )
rotation = 0.0162452
scale = Vector2( 1.19791, 1.20259 )
texture = ExtResource( 17 )

[node name="thick_book" type="Sprite" parent="YSort/computer_console"]
position = Vector2( -55.2729, -116.71 )
rotation = -0.016182
scale = Vector2( 0.834784, 0.831542 )
texture = ExtResource( 19 )

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 346.784, -227.859 )
camera = NodePath("../../../labpuzzleroom2/PuppyCamera")

[node name="potted_palm" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 754.036, -623.717 )

[node name="waste_bin" parent="YSort" instance=ExtResource( 4 )]
position = Vector2( -33.387, -36.3206 )

[node name="robot" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( 353.096, -752.485 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="YSort/robot"]
position = Vector2( 366.056, -231.518 )

[node name="sink" type="Node2D" parent="YSort"]
position = Vector2( 755.326, -24.796 )

[node name="sinktop" type="Sprite" parent="YSort/sink"]
position = Vector2( -5.34149, 71.769 )
texture = ExtResource( 6 )

[node name="counter" type="Node2D" parent="YSort"]
position = Vector2( 46.9702, -624.529 )

[node name="lab_counter" type="Sprite" parent="YSort/counter"]
position = Vector2( 22.0765, 91.6563 )
texture = ExtResource( 14 )

[node name="chemistry_stuff" type="Sprite" parent="YSort/counter/lab_counter"]
position = Vector2( 55.3142, -211.72 )
texture = ExtResource( 8 )

[node name="medium_book" type="Sprite" parent="YSort/counter/lab_counter"]
position = Vector2( -112.159, 30.6903 )
texture = ExtResource( 20 )

[node name="camera" type="Sprite" parent="."]
position = Vector2( -37.6627, -975.474 )
texture = ExtResource( 10 )

[node name="science_desk" type="Sprite" parent="."]
position = Vector2( -21.5583, 102.415 )
texture = ExtResource( 13 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -1591.17
margin_top = -1690.99
margin_right = 2157.83
margin_bottom = 1293.01

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -557.169, -1179.36 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1413.32, 316.681 )

[node name="CutsceneAnimation" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "default"
anims/default = SubResource( 1 )
anims/dropoff = SubResource( 2 )
anims/robot_appear = SubResource( 3 )
anims/robot_leave = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CutsceneAnimation"]
stream = ExtResource( 11 )
bus = "Effects"

[node name="Collisions" type="Node2D" parent="."]

[node name="left" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/left"]
polygon = PoolVector2Array( 249.419, -668.826, -96.173, -668.826, -96.173, 82.0277, 55.4896, 77.0552, 50.5171, 188.937, 234.501, 191.424, -461.655, 514.639, -476.573, -934.858 )

[node name="right" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/right"]
polygon = PoolVector2Array( 139.806, -666.418, 826.234, -663.854, 808.83, 193.91, 81.1377, 191.509, 1074.86, 502.208, 1069.89, -1004.47 )

[node name="bottomTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 340.725, 295.695 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
position = Vector2( 5.72461, 100.737 )
shape = SubResource( 5 )

[node name="CutscenePuppySpot" type="Position2D" parent="."]
position = Vector2( 49.6564, -596.464 )

[node name="LeaveSpot" type="Position2D" parent="."]
position = Vector2( 356.15, -749.475 )
[connection signal="transition_triggered" from="bottomTZ" to="." method="_on_bottomTZ_transition_triggered"]

[editable path="PuppyCamera"]

[editable path="bottomTZ"]
